Bug 304873 - PPP authentication "EAP" option is ignored
Summary: PPP authentication "EAP" option is ignored
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: 0.9
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-09 18:03 UTC by Andrey Rakhmatullin
Modified: 2012-08-10 01:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Rakhmatullin 2012-08-09 18:03:03 UTC
The PPP authentication option group contains 5 checkboxes, including "EAP". This last option is not written to the config, is not read from the config and so doesn't seem useful at all. 

Note that "refuse EAP" option *does* exist but is apparently always false unless written to the config manually.

Reproducible: Always
Comment 1 Lamarque V. Souza 2012-08-10 01:29:27 UTC
Git commit 65e6028d39f25679ffa994e46b5a46c5e62c5d76 by Lamarque V. Souza.
Committed on 10/08/2012 at 03:24.
Pushed by lvsouza into branch 'master'.

Read/Save EAP configuration in PPP tab for mobile broadband and
bluetooth connections.
FIXED-IN: 0.9.0.5

M  +2    -0    libs/ui/pppwidget.cpp

http://commits.kde.org/networkmanagement/65e6028d39f25679ffa994e46b5a46c5e62c5d76
Comment 2 Lamarque V. Souza 2012-08-10 01:32:28 UTC
Git commit 4d25f60a310e9eac9d06d59320b89e216737c052 by Lamarque V. Souza.
Committed on 10/08/2012 at 03:24.
Pushed by lvsouza into branch 'nm09'.

Read/Save EAP configuration in PPP tab for mobile broadband and
bluetooth connections.
FIXED-IN: 0.9.0.5
(cherry picked from commit 65e6028d39f25679ffa994e46b5a46c5e62c5d76)

M  +2    -0    libs/ui/pppwidget.cpp

http://commits.kde.org/networkmanagement/4d25f60a310e9eac9d06d59320b89e216737c052