Read/Save EAP configuration in PPP tab for mobile broadband and bluetooth connections.

BUG: 304873
FIXED-IN: 0.9.0.5
(cherry picked from commit 65e6028d39f25679ffa994e46b5a46c5e62c5d76)